[package]
name = "depdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tree-sitter = "0.20"
# tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.20"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "*"
